# parallel_processing

./: .gitignore
mpi/: CMakeLists.txt  graphs.ipynb  integral.c  results.csv  results_multithreaded.csv  sort.c  trap.c  vecsum.c  whatever.c
nbody/: .gitignore  Cargo.toml  plot.py  results.txt
nbody/src/: benchmark.rs  compute.wgsl  main.rs
pthreads/: CMakeLists.txt  tokenize.c
pthreads/lab1/: CMakeLists.txt  block_mult.c  block_mult2.c  col_mult.c  col_mult.h  col_mult.in  generate_data.py  main.c  matrix.c  matrix.h  qr_decomposition.c  row_mult.c  row_mult.h  row_mult.in  row_mult.out  run_tests.py
pthreads/lab1/data/: 100x100.in  100x100.out  10x10.in  10x10.out  20x20.in  20x20.out  250x250.in  250x250.out  4x4.in  4x4.out  50x50.in  50x50.out
